Fri Sep  4 02:34:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Log.cpp:

          Removed verbose diagnostic debug statements.  

Thu Sep  3 17:40:13 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.h:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.h:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/Session.cpp:

          General improvements to the tool. It is now able to handle log
          files generated with Exclusive TMS, GIOP 1.0 messages, and cases
          of cross-thread queue flushing. Also capture details about
          service contexts attached to requests and replies, and note when
          replies contain exceptions.

Thu Sep  3 10:44:26 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector_Impl.cpp:

          Removed extra reference count during make_svc_handler().
          This is also for Bug#3732.

Thu Sep  3 10:34:43 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.cpp:

          Fixed reference counting for HTIOP connection handler.
          This is required for Bug#3732.

Thu Sep  3 09:01:53 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Crash_On_Write/Crash_Task.cpp:

          Used terminate_process() instead of abort(). The later works
          differently on Solaris.

        * tests/Bug_1476_Test/test.ior:

          An attempt to fix this test on platforms where connect to
          localhost on non-blocking socket returns with ECONNREFUSED
          while it's expected to return with errno=EINPROGRESS.
          These are Solaris and other Unices. I changed the remote host
          in IOR from localhost to something really remote (google.com).

        * tests/Big_AMI/client.cpp:
        * tests/Bug_1361_Regression/Echo_Caller.cpp: